fix horizontal scrollbar on handsontable

--- a/src/sass/_handsontable.scss
+++ b/src/sass/_handsontable.scss
@@ -27,8 +27,6 @@ textarea.st-xls-field {
 }
 
 .handsontable-container {
-    overflow-x: auto;
-
     .ht_master {
         overflow: visible !important;
     }
